--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
 {
-  "name": "markdown",
+  "name": "md",
   "version": "1.0.0",
-  "description": "Realtime Markdown Viewer",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@github:alyonew/realtime-markdown-viewer.git"
+    "url": "realtime-markdown-viewer"
   },
-  "keywords": [
-    "markdown"
-  ],
-  "author": "Alyona Novikova",
+  "author": "Novikova Alyona",
   "license": "ISC",
-  "vue": "^2.5.13",
-  "vue-axios": "^2.0.2",
-  "vue-loader": "^13.5.0",
-  "vue-router": "^2.8.1",
-  "vue-template-compiler": "^2.5.9",
   "dependencies": {
-    "ejs": "^2.5.7",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongodb": "^2.2.33",
-    "vue": "^2.5.13"
+    "mongodb": "^2.2.33"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.11"
   }
 }
